# yfinance-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  justfile  rust-analyzer.toml
.github/workflows/: ci.yml  live-smoke.yml  publish.yml
examples/: 01_basic_usage.rs  02_fundamentals_and_search.rs  03_esg_and_analysis.rs  04_historical_actions.rs  05_concurrent_requests.rs  06_realtime_polling.rs  07_quarterly_fundamentals.rs  08_advanced_analysis.rs  09_holders_and_insiders.rs  10_convenience_methods.rs  11_builder_configuration.rs  12_advanced_client.rs  13_custom_client_and_proxy.rs  14_polars_dataframes.rs  15_screeners.rs  16_diagnostics_audit.rs
src/: lib.rs
src/analysis/: api.rs  fetch.rs  mod.rs  wire.rs
src/core/: call_options.rs  conversions.rs  currency.rs  error.rs  fixtures.rs  logging.rs  mod.rs  models.rs  net.rs  quotes.rs  quotesummary.rs  redaction.rs  services.rs  wire.rs  yahoo_vocab.rs
src/download/: mod.rs
src/esg/: api.rs  mod.rs  wire.rs
src/fundamentals/: api.rs  fetch.rs  mod.rs  wire.rs
src/history/: builder.rs  mod.rs  wire.rs
src/holders/: api.rs  mod.rs  wire.rs
src/news/: api.rs  mod.rs  wire.rs
src/profile/: api.rs  debug.rs  mod.rs
src/quote/: mod.rs
src/screener/: builder.rs  fields.rs  mod.rs  predefined.rs  query.rs  response.rs
src/search/: mod.rs
src/stream/: mod.rs  yaticker.rs
src/ticker/: info.rs  isin.rs  mod.rs  model.rs  options.rs  quote.rs
tests/: analysis.rs  auth.rs  common.rs  core.rs  download.rs  esg.rs  fundamentals.rs  history.rs  holders.rs  profile.rs  quotes.rs  screener.rs  search.rs  stream.rs  ticker.rs
tests/analysis/: earnings_trend.rs  offline.rs  price_target.rs  retry_synthetic.rs  sorted_upgrades.rs  strict_synthetic.rs  yahoo_error_passthrough.rs
tests/auth/: crumb_retry_synthetic.rs  live.rs  negative_cookie_crumb.rs
tests/core/: conversions.rs  public_validation.rs
tests/currency/: inference_live.rs  inference_offline.rs  verification.rs
tests/download/: back_adjust.rs  keepna_rounding.rs  live.rs  malformed_rounding.rs  no_repair.rs  offline.rs  repair.rs
tests/esg/: status_synthetic.rs
tests/fixtures/: analysis_api_earningsTrend_AAPL.json  analysis_api_financialData_MSFT.json  analysis_api_recommendationTrend-financialData_MSFT.json  analysis_api_recommendationTrend_AAPL.json  analysis_api_upgradeDowngradeHistory_GOOGL.json  esg_api_esgScores_MSFT.json  fundamentals_api_calendarEvents_DIVS.json  fundamentals_api_calendarEvents_META.json  fundamentals_api_calendarEvents_MSFT.json  fundamentals_api_earnings_AMZN.json  history_chart_AAPL.json  history_chart_AXIA-P.json  history_chart_GS2C.DE.json  history_chart_MSFT.json  history_chart_NVDA_SPLIT_VOLUME.json  history_chart_TSCO.L.json  history_chart_VFINX.json  isin_search_AAPL.json  (+70 more)
(+95 files in other folders)
