[package]
name = "yfinance-rs"
version = "0.9.0"
edition = "2024"
rust-version = "1.91"
description = "Ergonomic Rust client for Yahoo Finance, supporting historical prices, real-time streaming, options, fundamentals, and more."
license = "MIT"
repository = "https://github.com/gramistella/yfinance-rs"
homepage = "https://github.com/gramistella/yfinance-rs"
documentation = "https://docs.rs/yfinance-rs"
readme = "README.md"
keywords = ["yahoo", "finance", "stocks", "trading", "yfinance"]
categories = ["api-bindings", "finance"]
exclude = [
    ".github/**",
    "**/.DS_Store",
    "tests/fixtures/**",
]

[dependencies]
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls-native-roots", "gzip", "brotli", "deflate", "cookies"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
serde_field_result = { version = "0.1.0", features = ["json"] }
url = "2.5.7"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync", "time"] }
futures = "0.3"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"], optional = true }
futures-util = { version = "0.3", optional = true }
prost = { version = "0.14", optional = true }
getrandom = "0.3.3"
moka = { version = "0.12", default-features = false, features = ["sync"] }
paft = { version = "0.9.0", features = ["market", "fundamentals", "domain", "aggregates"] }
rust_decimal = "1.36"
tracing = { version = "0.1", optional = true }
unicode-normalization = "0.1.25"

[dependencies.tracing-subscriber]
version = "0.3"
optional = true
default-features = false
features = ["fmt", "std", "env-filter"]

[dev-dependencies]
httpmock = "0.8.2"
polars = { version = "0.53", default-features = false, features = ["lazy", "rolling_window"] }

[features]
default = []
stream = ["dep:base64", "dep:futures-util", "dep:prost", "dep:tokio-tungstenite"]
test-mode = []
debug-dumps = []
dataframe = ["paft/dataframe"]
tracing = ["dep:tracing"]
# Dev-only convenience to initialize a subscriber in examples/tests
tracing-subscriber = ["tracing", "dep:tracing-subscriber"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-doc]
all-features = true

[[example]]
name = "01_basic_usage"
required-features = ["stream"]

[[example]]
name = "06_realtime_polling"
required-features = ["stream"]

[[example]]
name = "14_polars_dataframes"
required-features = ["dataframe"]

[[example]]
name = "16_diagnostics_audit"
required-features = ["stream"]
